// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`parseWorkflowBody converts syntax-error/body-unclosed-block.js syntax errors to body diagnostics 1`] = `
{
  "docs": "docs/rules/body-syntax.md",
  "message": "Workflow body must be syntactically complete after ODW normalization: Expected '}', got '<eof>'",
  "rule": "odw/body-syntax",
  "severity": "error",
  "span": {
    "end": {
      "column": 1,
      "line": 9,
      "offset": 179,
    },
    "start": {
      "column": 3,
      "line": 5,
      "offset": 127,
    },
  },
}
`;

exports[`parseWorkflowBody converts syntax-error/body-unclosed-call.js syntax errors to body diagnostics 1`] = `
{
  "docs": "docs/rules/body-syntax.md",
  "message": "Workflow body must be syntactically complete after ODW normalization: Expected ',', got '}'",
  "rule": "odw/body-syntax",
  "severity": "error",
  "span": {
    "end": {
      "column": 1,
      "line": 8,
      "offset": 147,
    },
    "start": {
      "column": 3,
      "line": 5,
      "offset": 125,
    },
  },
}
`;
